# SuperMario

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Doxyfile  Makefile  README.md  makefile
.github/workflows/: build.yml
assets/: map1  splash1
src/: AllegroHandler.hpp  Common.hpp  Game.cpp  Game.hpp  GameManager.cpp  GameManager.hpp  GameStates.cpp  GameStates.hpp  Map.cpp  Map.hpp  Objects.cpp  Objects.hpp  Player.cpp  Player.hpp  ScreenHandler.hpp  SoundManager.cpp  SoundManager.hpp  SplashScreenManager.cpp  SplashScreenManager.hpp  SpriteManager.cpp  SpriteManager.hpp  TileManager.cpp  TileManager.hpp  common.hpp  game.cpp  game.hpp  gamemanager.cpp  gamemanager.hpp  gamestates.cpp  gamestates.hpp  main.cpp  map.cpp  map.hpp  object.cpp  object.hpp  player.cpp  player.hpp  spritemanager.cpp  spritemanager.hpp  tilemanager.cpp  (+1 more)
win/: Mario.sln
win/Mario/: Mario.vcxproj  Mario.vcxproj.filters
